--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ accelerate                1.4.0
 aiohappyeyeballs          2.4.8
 aiohttp                   3.11.13
 aiosignal                 1.3.2
+annotated-types           0.7.0
 anyio                     4.8.0
 argon2-cffi               23.1.0
 argon2-cffi-bindings      21.2.0
@@ -18,15 +19,20 @@ bert-score                0.3.13
 bitsandbytes              0.45.3
 bleach                    6.2.0
 blinker                   1.9.0
+blis                      1.2.0
+catalogue                 2.0.10
 certifi                   2025.1.31
 cffi                      1.17.1
 charset-normalizer        3.4.1
 click                     8.1.8
+cloudpathlib              0.21.0
 cloudscraper              1.2.71
 colorama                  0.4.6
 comm                      0.2.2
+confection                0.1.5
 contourpy                 1.3.1
 cycler                    0.12.1
+cymem                     2.0.11
 datasets                  3.3.2
 debugpy                   1.8.12
 decorator                 5.2.1
@@ -37,16 +43,20 @@ einops                    0.8.1
 elastic-apm               6.23.0
 elastic-transport         8.17.0
 elasticsearch             8.17.2
+en_core_web_sm            3.8.0
 exceptiongroup            1.2.2
 executing                 2.2.0
 fastjsonschema            2.21.1
 filelock                  3.17.0
 flash_attn                2.7.4.post1
 Flask                     3.1.0
+Flask-Login               0.6.3
+Flask-SQLAlchemy          3.1.1
 fonttools                 4.56.0
 fqdn                      1.5.1
 frozenlist                1.5.0
 fsspec                    2024.12.0
+greenlet                  3.1.1
 h11                       0.14.0
 html5lib                  1.1
 httpcore                  1.0.7
@@ -78,21 +88,29 @@ jupyterlab_pygments       0.3.0
 jupyterlab_server         2.27.3
 jupyterlab_widgets        3.0.13
 kiwisolver                1.4.8
+langcodes                 3.5.0
+language_data             1.3.0
+Levenshtein               0.27.1
 logits-processor-zoo      0.1.1
 lxml                      5.3.1
+marisa-trie               1.2.1
+markdown-it-py            3.0.0
 MarkupSafe                3.0.2
 matplotlib                3.10.1
 matplotlib-inline         0.1.7
+mdurl                     0.1.2
 mistune                   3.1.2
 mpmath                    1.3.0
 multidict                 6.1.0
 multiprocess              0.70.16
+murmurhash                1.0.12
 nbclient                  0.10.2
 nbconvert                 7.16.6
 nbformat                  5.10.4
 nest-asyncio              1.6.0
 networkx                  3.4.2
 ninja                     1.11.1.3
+nltk                      3.9.1
 notebook                  7.3.2
 notebook_shim             0.2.4
 numpy                     2.1.2
@@ -106,6 +124,7 @@ peft                      0.14.0
 pillow                    11.0.0
 pip                       25.0.1
 platformdirs              4.3.6
+preshed                   3.0.9
 prometheus_client         0.21.1
 prompt_toolkit            3.0.50
 propcache                 0.3.0
@@ -113,8 +132,11 @@ psutil                    7.0.0
 pure_eval                 0.2.3
 pyarrow                   19.0.1
 pycparser                 2.22
+pydantic                  2.11.1
+pydantic_core             2.33.0
 Pygments                  2.19.1
 pyparsing                 3.2.1
+PyPDF2                    3.0.1
 PySocks                   1.7.1
 python-dateutil           2.9.0.post0
 python-json-logger        3.2.1
@@ -123,12 +145,14 @@ pywin32                   308
 pywinpty                  2.0.15
 PyYAML                    6.0.2
 pyzmq                     26.2.1
+RapidFuzz                 3.12.2
 referencing               0.36.2
 regex                     2024.11.6
 requests                  2.32.3
 requests-toolbelt         1.0.0
 rfc3339-validator         0.1.4
 rfc3986-validator         0.1.1
+rich                      14.0.0
 rpds-py                   0.23.1
 safetensors               0.5.3
 scikit-learn              1.6.1
@@ -138,13 +162,21 @@ selenium                  4.29.0
 Send2Trash                1.8.3
 sentence-transformers     3.4.1
 setuptools                75.8.0
+shellingham               1.5.4
 six                       1.17.0
+smart-open                7.1.0
 sniffio                   1.3.1
 sortedcontainers          2.4.0
 soupsieve                 2.6
+spacy                     3.8.4
+spacy-legacy              3.0.12
+spacy-loggers             1.0.5
+SQLAlchemy                2.0.40
+srsly                     2.5.1
 stack-data                0.6.3
 sympy                     1.13.1
 terminado                 0.18.1
+thinc                     8.3.4
 threadpoolctl             3.5.0
 tinycss2                  1.4.0
 tokenizers                0.21.0
@@ -158,12 +190,16 @@ traitlets                 5.14.3
 transformers              4.49.0
 trio                      0.29.0
 trio-websocket            0.12.2
+typer                     0.15.2
 types-python-dateutil     2.9.0.20241206
 typing_extensions         4.12.2
+typing-inspection         0.4.0
 tzdata                    2025.1
 uri-template              1.3.0
 urllib3                   2.3.0
+wasabi                    1.1.3
 wcwidth                   0.2.13
+weasel                    0.4.1
 webcolors                 24.11.1
 webencodings              0.5.1
 websocket-client          1.8.0
