--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,6 @@ attrs==25.1.0
 babel==2.17.0
 beautifulsoup4==4.13.3
 bert-score==0.3.13
-bitsandbytes==0.45.3
 bleach==6.2.0
 blinker==1.9.0
 blis==1.2.0
@@ -28,7 +27,6 @@ cloudscraper==1.2.71
 colorama==0.4.6
 comm==0.2.2
 confection==0.1.5
-contourpy==1.3.1
 cycler==0.12.1
 cymem==2.0.11
 datasets==3.3.2
@@ -46,7 +44,6 @@ exceptiongroup==1.2.2
 executing==2.2.0
 fastjsonschema==2.21.1
 filelock==3.17.0
-flash_attn @ file:///D:/Side_projects/Job_Recommendation/third_parties/flash_attention/flash_attn-2.7.4.post1%2Bcu124torch2.6.0cxx11abiFALSE-cp310-cp310-win_amd64.whl#sha256=4f0e070dcb873762942560298d58a5f9793194fe042c722c003df636510f1c08
 Flask==3.1.0
 Flask-Login==0.6.3
 Flask-SQLAlchemy==3.1.1
@@ -62,7 +59,7 @@ httpx==0.28.1
 huggingface-hub==0.29.1
 idna==3.10
 ipykernel==6.29.5
-ipython==8.33.0
+ipython
 ipywidgets==8.1.5
 isoduration==20.11.0
 itsdangerous==2.2.0
@@ -85,16 +82,13 @@ jupyterlab==4.3.5
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.3
 jupyterlab_widgets==3.0.13
-kiwisolver==1.4.8
 langcodes==3.5.0
 language_data==1.3.0
 Levenshtein==0.27.1
-logits-processor-zoo @ file:///D:/Side_projects/Kaggle/logits_processor_zoo-0.1.1-py3-none-any.whl#sha256=2a873750bf5f0f259d563e6a67ad1bc1725565971e41221acfb8b63b7821ea24
 lxml==5.3.1
 marisa-trie==1.2.1
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
-matplotlib==3.10.1
 matplotlib-inline==0.1.7
 mdurl==0.1.2
 mistune==3.1.2
@@ -106,12 +100,10 @@ nbclient==0.10.2
 nbconvert==7.16.6
 nbformat==5.10.4
 nest-asyncio==1.6.0
-networkx==3.4.2
 ninja==1.11.1.3
 nltk==3.9.1
 notebook==7.3.2
 notebook_shim==0.2.4
-numpy==2.1.2
 outcome==1.3.0.post0
 overrides==7.7.0
 packaging==24.2
@@ -138,8 +130,6 @@ PySocks==1.7.1
 python-dateutil==2.9.0.post0
 python-json-logger==3.2.1
 pytz==2025.1
-pywin32==308
-pywinpty==2.0.15
 PyYAML==6.0.2
 pyzmq==26.2.1
 RapidFuzz==3.12.2
@@ -153,20 +143,18 @@ rich==14.0.0
 rpds-py==0.23.1
 safetensors==0.5.3
 scikit-learn==1.6.1
-scipy==1.15.2
 seaborn==0.13.2
 selenium==4.29.0
 Send2Trash==1.8.3
-sentence-transformers==3.4.1
 shellingham==1.5.4
 six==1.17.0
 smart-open==7.1.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
 soupsieve==2.6
-spacy==3.8.4
-spacy-legacy==3.0.12
-spacy-loggers==1.0.5
+spacy
+spacy-legacy
+spacy-loggers
 SQLAlchemy==2.0.40
 srsly==2.5.1
 stack-data==0.6.3
@@ -175,15 +163,10 @@ terminado==0.18.1
 thinc==8.3.4
 threadpoolctl==3.5.0
 tinycss2==1.4.0
-tokenizers==0.21.0
 tomli==2.2.1
-torch==2.6.0+cu126
-torchaudio==2.6.0+cu126
-torchvision==0.21.0+cu126
 tornado==6.4.2
 tqdm==4.67.1
 traitlets==5.14.3
-transformers==4.49.0
 trio==0.29.0
 trio-websocket==0.12.2
 typer==0.15.2
